implementing the ppu, lcd and imported opengl and glfw

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,12 @@ project(GBEmulator)
 # Set the C++ standard
 set(CMAKE_CXX_STANDARD 17)
 
+set(GLFW_ROOT C:/glfw-3.4)
+
+include_directories(${GLFW_ROOT}/include)
+set(GLFW_LIBRARY ${GLFW_ROOT}/build/src/Release/glfw3dll.lib)
+find_package(OpenGL REQUIRED)
+
 # Add an executable target
 add_executable(GBEmulator
         main.cpp
@@ -23,4 +29,6 @@ add_executable(GBEmulator
         timers/timers.hpp
 
         memory/memory.hpp
+        ppu/LCD.hpp
+        ppu/fifo.hpp
 )
