Rendering screen using GPU (cuda implementation)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,20 +1,16 @@
-# Minimum required version of CMake
 cmake_minimum_required(VERSION 3.10)
+project(GBEmulator CUDA CXX)
 
-# Set the project name
-project(GBEmulator)
-
-# Set the C++ standard
 set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CUDA_STANDARD 17)
 
-# Find SDL2 package
+set(CMAKE_CUDA_ARCHITECTURES 75 86)
+cmake_policy(SET CMP0104 NEW)
+
 set(SDL3_DIR C:/SDL3-3.2.4/cmake)
 find_package(SDL3 REQUIRED)
-
-# Include SDL2 headers
 include_directories(${SDL3_INCLUDE_DIRS})
 
-# Add an executable target
 add_executable(GBEmulator
         main.cpp
         defs.hpp
@@ -25,14 +21,23 @@ add_executable(GBEmulator
         cpu/interrupts.cpp
 
         ppu/ppu.hpp
-        ppu/oam.hpp
+        ppu/LCD.hpp
+        ppu/fifo.hpp
 
         timers/timers.hpp
 
         memory/memory.hpp
-        ppu/LCD.hpp
-        ppu/fifo.hpp
+
         profiling/profiling.hpp
+
+        ppu/video.cu
+        ppu/video.cuh
+        ppu/bg_ppu.cpp
+        ppu/utils/utils.hpp
+        ppu/utils/utils.cpp
 )
+
+set_target_properties(GBEmulator PROPERTIES
+        CUDA_SEPARABLE_COMPILATION ON)
 
 target_link_libraries(GBEmulator ${SDL3_LIBRARIES})
